[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pymedoo"
version = "0.0.4"
description = "A lightweight database framework for python"
homepage = "https://github.com/pwwang/pymedoo"
repository = "https://github.com/pwwang/pymedoo"
readme = "README.md"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
[[tool.poetry.packages]]
include = "medoo"

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"

[tool.poetry.dependencies.six]
version = "^1.12"
python = "~2.7"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
tablib = "^0.13.0"

