[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "medoo"
version = "0.0.8"
description = "A lightweight database framework for python"
homepage = "https://github.com/pwwang/pymedoo"
repository = "https://github.com/pwwang/pymedoo"
readme = "README.md"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
[[tool.poetry.packages]]
include = "medoo"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
tablib = "^0.13.0"
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^1.5.3"

[tool.poetry.dependencies.six]
version = "^1.12"
python = "~2.7"
