[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "medoo"
version = "0.1.0"
description = "A lightweight database framework for python"
homepage = "https://github.com/pwwang/pymedoo"
repository = "https://github.com/pwwang/pymedoo"
readme = "README.md"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mysql-connector-python = {version = "^8", optional = true}
psycopg2 = {version = "^2", optional = true}
pymssql = {version = "^2", optional = true}
cx-Oracle = {version = "^8", optional = true}

[tool.poetry.extras]
all = [ "mysql-connector-python", "psycopg2", "pymssql", "cx-Oracle" ]
mysql = ["mysql-connector-python"]
postgresql = ["psycopg2"]
mssql = ["pymssql"]
oracle = ["cx-Oracle"]

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^3"
tablib = "^3"

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
